--- a/quiz/leetcode/editor/cn/doc/content/[144]二叉树的前序遍历.md
+++ b/quiz/leetcode/editor/cn/doc/content/[144]二叉树的前序遍历.md
@@ -56,7 +56,7 @@
 
 <div id="labuladong"><hr>
 
-**通知：[新版网站会员](https://labuladong.online/algo/intro/site-vip/) 限时优惠；算法可视化编辑器上线，[点击体验](https://labuladong.online/algo/intro/visualize/)！**
+**通知：[新版网站会员](https://labuladong.online/algo/intro/site-vip/) 即将涨价！算法可视化编辑器上线，[点击体验](https://labuladong.online/algo/intro/visualize/)！**
 
 
 
@@ -69,11 +69,11 @@
 
 不要瞧不起二叉树的前中后序遍历。
 
-前文 [手把手刷二叉树总结篇](https://labuladong.online/algo/fname.html?fname=二叉树总结) 说过二叉树的递归分为「遍历」和「分解问题」两种思维模式，分别代表回溯算法和动态规划的底层思想。
+前文 [手把手刷二叉树总结篇](https://labuladong.online/algo/essential-technique/binary-tree-summary/) 说过二叉树的递归分为「遍历」和「分解问题」两种思维模式，分别代表回溯算法和动态规划的底层思想。
 
 本题用两种思维模式来解答，注意体会其中思维方式的差异。
 
-**详细题解：[东哥带你刷二叉树（纲领篇）](https://labuladong.online/algo/fname.html?fname=二叉树总结)**
+**详细题解：[东哥带你刷二叉树（纲领篇）](https://labuladong.online/algo/essential-technique/binary-tree-summary/)**
 
 **标签：[二叉树](https://labuladong.online/algo/)**
 
@@ -96,45 +96,44 @@
 
 ```cpp
 // 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
-// 本代码不保证正确性，仅供参考。如有疑惑，可以参照我写的 java 代码对比查看。
+// 本代码已经通过力扣的测试用例，应该可直接成功提交。
 
 class Solution {
-private:
-    /* 动态规划思路 */
+public:
+    // 动态规划思路
     // 定义：输入一个节点，返回以该节点为根的二叉树的前序遍历结果
     vector<int> preorderTraversal(TreeNode* root) {
         vector<int> res;
-        if (!root) {
+        if (root == nullptr) {
             return res;
         }
         // 前序遍历结果特点：第一个是根节点的值，接着是左子树，最后是右子树
         res.push_back(root->val);
         vector<int> left = preorderTraversal(root->left);
-        res.insert(res.end(), left.begin(), left.end());
         vector<int> right = preorderTraversal(root->right);
+        res.insert(res.end(), left.begin(), left.end());
         res.insert(res.end(), right.begin(), right.end());
         return res;
     }
 
-    /* 回溯算法思路 */
+    // 回溯算法思路
     vector<int> res;
+
+    // 返回前序遍历结果
+    vector<int> preorderTraversal2(TreeNode* root) {
+        traverse(root);
+        return res;
+    }
 
     // 二叉树遍历函数
     void traverse(TreeNode* root) {
-        if (!root) {
+        if (root == nullptr) {
             return;
         }
         // 前序遍历位置
         res.push_back(root->val);
         traverse(root->left);
         traverse(root->right);
-    }
-
-public:
-    // 返回前序遍历结果
-    vector<int> preorderTraversal2(TreeNode* root) {
-        traverse(root);
-        return res;
     }
 };
 ```
@@ -149,17 +148,17 @@ public:
 
 # Definition for a binary tree node.
 # class TreeNode:
-#     def __init__(self, val=0, left=None, right=None):
-#         self.val = val
-#         self.left = left
-#         self.right = right
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
 
 class Solution:
     # 动态规划思路
     # 定义：输入一个节点，返回以该节点为根的二叉树的前序遍历结果
     def preorderTraversal(self, root: TreeNode) -> List[int]:
         res = []
-        if not root:
+        if root is None:
             return res
         # 前序遍历结果特点：第一个是根节点的值，接着是左子树，最后是右子树
         res.append(root.val)
@@ -168,17 +167,17 @@ class Solution:
         return res
 
     # 回溯算法思路
-    def __init__(self):
-        self.res = []
+    res = []
 
     # 返回前序遍历结果
     def preorderTraversal2(self, root: TreeNode) -> List[int]:
+        self.res = []
         self.traverse(root)
         return self.res
 
     # 二叉树遍历函数
-    def traverse(self, root: TreeNode) -> None:
-        if not root:
+    def traverse(self, root: TreeNode):
+        if root is None:
             return
         # 前序遍历位置
         self.res.append(root.val)
@@ -192,7 +191,7 @@ class Solution:
 
 ```java
 class Solution {
-    /* 动态规划思路 */
+    // 动态规划思路
     // 定义：输入一个节点，返回以该节点为根的二叉树的前序遍历结果
     public List<Integer> preorderTraversal(TreeNode root) {
         LinkedList<Integer> res = new LinkedList<>();
@@ -206,7 +205,7 @@ class Solution {
         return res;
     }
 
-    /* 回溯算法思路 */
+    // 回溯算法思路
     LinkedList<Integer> res = new LinkedList<>();
 
     // 返回前序遍历结果
@@ -236,42 +235,43 @@ class Solution {
 // 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
 // 本代码已经通过力扣的测试用例，应该可直接成功提交。
 
-/**
- * Definition for a binary tree node.
- * type TreeNode struct {
- *     Val int
- *     Left *TreeNode
- *     Right *TreeNode
- * }
- */
- 
+// 动态规划思路
+// 定义：输入一个节点，返回以该节点为根的二叉树的前序遍历结果
 func preorderTraversal(root *TreeNode) []int {
-    var res []int
+    return dpPreorder(root)
+}
+
+// 辅助函数使用动态规划进行前序遍历
+func dpPreorder(root *TreeNode) []int {
     if root == nil {
-        return res
+        return []int{}
     }
-
-    // 动态规划思路
     // 前序遍历结果特点：第一个是根节点的值，接着是左子树，最后是右子树
-    res = append(res, root.Val)
-    res = append(res, preorderTraversal(root.Left)...)
-    res = append(res, preorderTraversal(root.Right)...)
+    result := []int{root.Val}
+    result = append(result, dpPreorder(root.Left)...)
+    result = append(result, dpPreorder(root.Right)...)
+    return result
+}
 
-    // 回溯算法思路
-    // traverse(root, &res)
-
+// 回溯算法思路
+// 返回前序遍历结果
+func preorderTraversal2(root *TreeNode) []int {
+    res := []int{}
+    traverse(root, &res)
     return res
 }
 
-// 回溯算法
-// func traverse(root *TreeNode, res *[]int) {
-//     if root == nil {
-//         return
-//     }
-//     *res = append(*res, root.Val)
-//     traverse(root.Left, res)
-//     traverse(root.Right, res)
-// }
+// 二叉树遍历函数
+// 使用辅助函数进行遍历，避免使用全局变量
+func traverse(root *TreeNode, res *[]int) {
+    if root == nil {
+        return
+    }
+    // 前序遍历位置
+    *res = append(*res, root.Val)
+    traverse(root.Left, res)
+    traverse(root.Right, res)
+}
 ```
 
 </div></div>
@@ -280,43 +280,38 @@ func preorderTraversal(root *TreeNode) []int {
 
 ```javascript
 // 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
-// 本代码不保证正确性，仅供参考。如有疑惑，可以参照我写的 java 代码对比查看。
+// 本代码已经通过力扣的测试用例，应该可直接成功提交。
 
-var Solution = function() {
-
-    /* 动态规划思路 */
-    // 定义：输入一个节点，返回以该节点为根的二叉树的前序遍历结果
-    this.preorderTraversal = function(root) {
-        let res = [];
-        if (root == null) {
-            return res;
-        }
-        // 前序遍历结果特点：第一个是根节点的值，接着是左子树，最后是右子树
-        res.push(root.val);
-        res = res.concat(this.preorderTraversal(root.left));
-        res = res.concat(this.preorderTraversal(root.right));
-        return res;
-    };
-
-    /* 回溯算法思路 */
+// 动态规划思路
+// 定义：输入一个节点，返回以该节点为根的二叉树的前序遍历结果
+var preorderTraversal = function(root) {
     let res = [];
-
-    // 返回前序遍历结果
-    this.preorderTraversal2 = function(root) {
-        traverse(root);
+    if (root === null) {
         return res;
-    };
+    }
+    // 前序遍历结果特点：第一个是根节点的值，接着是左子树，最后是右子树
+    res.push(root.val);
+    res = res.concat(preorderTraversal(root.left));
+    res = res.concat(preorderTraversal(root.right));
+    return res;
+};
 
+// 回溯算法思路
+var preorderTraversal2 = function(root) {
+    let res = [];
+    // 返回前序遍历结果
     // 二叉树遍历函数
-    function traverse(root) {
-        if (root == null) {
+    var traverse = function(root) {
+        if (root === null) {
             return;
         }
         // 前序遍历位置
         res.push(root.val);
         traverse(root.left);
         traverse(root.right);
-    }
+    };
+    traverse(root);
+    return res;
 };
 ```
 
@@ -330,4 +325,6 @@ var Solution = function() {
 
 </details>
 </div>
+
+
 
