add 6 dfs questions, including 1 sudoku and five island

--- a/quiz/leetcode/editor/cn/doc/content/[216]组合总和 III.md
+++ b/quiz/leetcode/editor/cn/doc/content/[216]组合总和 III.md
@@ -47,16 +47,4 @@
  <li><code>1 &lt;= n &lt;= 60</code></li> 
 </ul>
 
-<details><summary><strong>Related Topics</strong></summary>数组 | 回溯</details><br>
-
-<div>👍 859, 👎 0<span style='float: right;'><span style='color: gray;'><a href='https://github.com/labuladong/fucking-algorithm/discussions/939' target='_blank' style='color: lightgray;text-decoration: underline;'>bug 反馈</a> | <a href='https://labuladong.online/algo/fname.html?fname=jb插件简介' target='_blank' style='color: lightgray;text-decoration: underline;'>使用指南</a> | <a href='https://labuladong.online/algo/images/others/%E5%85%A8%E5%AE%B6%E6%A1%B6.jpg' target='_blank' style='color: lightgray;text-decoration: underline;'>更多配套插件</a></span></span></div>
-
-<div id="labuladong"><hr>
-
-**通知：[新版网站会员](https://labuladong.online/algo/intro/site-vip/) 限时优惠；算法可视化编辑器上线，[点击体验](https://labuladong.online/algo/intro/visualize/)！**
-
-
-
-<p><strong><a href="https://labuladong.online/algo/slug.html?slug=combination-sum-iii" target="_blank">⭐️labuladong 题解</a></strong></p>
-</div>
-
+<div><div>Related Topics</div><div><li>数组</li><li>回溯</li></div></div><br><div><li>👍 951</li><li>👎 0</li></div>
