review and amend

--- a/quiz/leetcode/editor/cn/doc/content/[200]岛屿数量.md
+++ b/quiz/leetcode/editor/cn/doc/content/[200]岛屿数量.md
@@ -42,3 +42,298 @@
 </ul>
 
 <div><div>Related Topics</div><div><li>深度优先搜索</li><li>广度优先搜索</li><li>并查集</li><li>数组</li><li>矩阵</li></div></div><br><div><li>👍 2832</li><li>👎 0</li></div>
+
+<div id="labuladong"><hr>
+
+**通知：为满足广大读者的需求，网站上架 [速成目录](https://labuladong.online/algo/intro/quick-learning-plan/)，如有需要可以看下，谢谢大家的支持~**
+
+
+
+<p><strong><a href="https://labuladong.online/algo/frequency-interview/island-dfs-summary/" target="_blank">⭐️labuladong 题解</a></strong></p>
+<details><summary><strong>labuladong 思路</strong></summary>
+
+
+<div id="labuladong_solution_zh">
+
+## 基本思路
+
+岛屿系列问题可以用 DFS/BFS 算法或者 [Union-Find 并查集算法](https://labuladong.online/algo/data-structure/union-find/) 来解决。
+
+用 DFS 算法解决岛屿题目是最常见的，每次遇到一个岛屿中的陆地，就用 DFS 算法吧这个岛屿「淹掉」。
+
+如何使用 DFS 算法遍历二维数组？你把二维数组中的每个格子看做「图」中的一个节点，这个节点和周围的四个节点连通，这样二维矩阵就被抽象成了一幅网状的「图」。
+
+为什么每次遇到岛屿，都要用 DFS 算法把岛屿「淹了」呢？主要是为了省事，避免维护 `visited` 数组。
+
+[图算法遍历基础](https://labuladong.online/algo/data-structure-basic/graph-basic/) 说了，遍历图是需要 `visited` 数组记录遍历过的节点防止走回头路。
+
+因为 `dfs` 函数遍历到值为 `0` 的位置会直接返回，所以只要把经过的位置都设置为 `0`，就可以起到不走回头路的作用。
+
+**详细题解**：
+  - [一文秒杀所有岛屿题目](https://labuladong.online/algo/frequency-interview/island-dfs-summary/)
+
+</div>
+
+
+
+
+
+<div id="solution">
+
+## 解法代码
+
+
+
+<div class="tab-panel"><div class="tab-nav">
+<button data-tab-item="cpp" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">cpp🤖</button>
+
+<button data-tab-item="python" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">python🤖</button>
+
+<button data-tab-item="java" class="tab-nav-button btn active" data-tab-group="default" onclick="switchTab(this)">java🟢</button>
+
+<button data-tab-item="go" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">go🤖</button>
+
+<button data-tab-item="javascript" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">javascript🤖</button>
+</div><div class="tab-content">
+<div data-tab-item="cpp" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```cpp
+// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution {
+public:
+    // 主函数，计算岛屿数量
+    int numIslands(vector<vector<char>>& grid) {
+        int res = 0;
+        int m = grid.size(), n = grid[0].size();
+        // 遍历 grid
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == '1') {
+                    // 每发现一个岛屿，岛屿数量加一
+                    res++;
+                    // 然后使用 DFS 将岛屿淹了
+                    dfs(grid, i, j);
+                }
+            }
+        }
+        return res;
+    }
+
+    // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    void dfs(vector<vector<char>>& grid, int i, int j) {
+        int m = grid.size(), n = grid[0].size();
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            // 超出索引边界
+            return;
+        }
+        if (grid[i][j] == '0') {
+            // 已经是海水了
+            return;
+        }
+        // 将 (i, j) 变成海水
+        grid[i][j] = '0';
+        // 淹没上下左右的陆地
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+};
+```
+
+</div></div>
+
+<div data-tab-item="python" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```python
+# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译。
+# 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution:
+    # 主函数，计算岛屿数量
+    def numIslands(self, grid: List[List[str]]) -> int:
+        res = 0
+        m, n = len(grid), len(grid[0])
+        # 遍历 grid
+        for i in range(m):
+            for j in range(n):
+                if grid[i][j] == '1':
+                    # 每发现一个岛屿，岛屿数量加一
+                    res += 1
+                    # 然后使用 DFS 将岛屿淹了
+                    self.dfs(grid, i, j)
+        return res
+
+    # 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    def dfs(self, grid: List[List[str]], i: int, j: int) -> None:
+        m, n = len(grid), len(grid[0])
+        if i < 0 or j < 0 or i >= m or j >= n:
+            # 超出索引边界
+            return
+        if grid[i][j] == '0':
+            # 已经是海水了
+            return
+        # 将 (i, j) 变成海水
+        grid[i][j] = '0'
+        # 淹没上下左右的陆地
+        self.dfs(grid, i + 1, j)
+        self.dfs(grid, i, j + 1)
+        self.dfs(grid, i - 1, j)
+        self.dfs(grid, i, j - 1)
+```
+
+</div></div>
+
+<div data-tab-item="java" class="tab-item active" data-tab-group="default"><div class="highlight">
+
+```java
+class Solution {
+    // 主函数，计算岛屿数量
+    public int numIslands(char[][] grid) {
+        int res = 0;
+        int m = grid.length, n = grid[0].length;
+        // 遍历 grid
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == '1') {
+                    // 每发现一个岛屿，岛屿数量加一
+                    res++;
+                    // 然后使用 DFS 将岛屿淹了
+                    dfs(grid, i, j);
+                }
+            }
+        }
+        return res;
+    }
+
+    // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    void dfs(char[][] grid, int i, int j) {
+        int m = grid.length, n = grid[0].length;
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            // 超出索引边界
+            return;
+        }
+        if (grid[i][j] == '0') {
+            // 已经是海水了
+            return;
+        }
+        // 将 (i, j) 变成海水
+        grid[i][j] = '0';
+        // 淹没上下左右的陆地
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+}
+```
+
+</div></div>
+
+<div data-tab-item="go" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```go
+// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+// 主函数，计算岛屿数量
+func numIslands(grid [][]byte) int {
+    res := 0
+    m := len(grid)
+    n := len(grid[0])
+    // 遍历 grid
+    for i := 0; i < m; i++ {
+        for j := 0; j < n; j++ {
+            if grid[i][j] == '1' {
+                // 每发现一个岛屿，岛屿数量加一
+                res++
+                // 然后使用 DFS 将岛屿淹了
+                dfs(grid, i, j)
+            }
+        }
+    }
+    return res
+}
+
+// 从 (i, j) 开始，将与之相邻的陆地都变成海水
+func dfs(grid [][]byte, i, j int) {
+    m := len(grid)
+    n := len(grid[0])
+    if i < 0 || j < 0 || i >= m || j >= n {
+        // 超出索引边界
+        return
+    }
+    if grid[i][j] == '0' {
+        // 已经是海水了
+        return
+    }
+    // 将 (i, j) 变成海水
+    grid[i][j] = '0'
+    // 淹没上下左右的陆地
+    dfs(grid, i+1, j)
+    dfs(grid, i, j+1)
+    dfs(grid, i-1, j)
+    dfs(grid, i, j-1)
+}
+```
+
+</div></div>
+
+<div data-tab-item="javascript" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```javascript
+// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+// 主函数，计算岛屿数量
+var numIslands = function(grid) {
+    let res = 0;
+    let m = grid.length, n = grid[0].length;
+    // 遍历 grid
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid[i][j] === '1') {
+                // 每发现一个岛屿，岛屿数量加一
+                res++;
+                // 然后使用 DFS 将岛屿淹了
+                dfs(grid, i, j);
+            }
+        }
+    }
+    return res;
+};
+
+// 从 (i, j) 开始，将与之相邻的陆地都变成海水
+var dfs = function(grid, i, j) {
+    let m = grid.length, n = grid[0].length;
+    if (i < 0 || j < 0 || i >= m || j >= n) {
+        // 超出索引边界
+        return;
+    }
+    if (grid[i][j] === '0') {
+        // 已经是海水了
+        return;
+    }
+    // 将 (i, j) 变成海水
+    grid[i][j] = '0';
+    // 淹没上下左右的陆地
+    dfs(grid, i + 1, j);
+    dfs(grid, i, j + 1);
+    dfs(grid, i - 1, j);
+    dfs(grid, i, j - 1);
+};
+```
+
+</div></div>
+</div></div>
+
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>🎃🎃 算法可视化 🎃🎃</strong></summary><div id="data_number-of-islands"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<div id="iframe_number-of-islands"></div></div>
+</details><hr /><br />
+
+</div>
+</details>
+</div>
+
