--- a/quiz/leetcode/editor/cn/doc/content/[206]反转链表.md
+++ b/quiz/leetcode/editor/cn/doc/content/[206]反转链表.md
@@ -46,12 +46,15 @@
 
 <div id="labuladong"><hr>
 
-**通知：[新版网站会员](https://labuladong.online/algo/intro/site-vip/) 限时优惠；算法可视化编辑器上线，[点击体验](https://labuladong.online/algo/intro/visualize/)！**
+**通知：为满足广大读者的需求，网站上架 [速成目录](https://labuladong.online/algo/intro/quick-learning-plan/)，如有需要可以看下，谢谢大家的支持~**
 
 
 
-<p><strong><a href="https://labuladong.online/algo/slug.html?slug=reverse-linked-list" target="_blank">⭐️labuladong 题解</a></strong></p>
+<p><strong><a href="https://labuladong.online/algo/data-structure/reverse-linked-list-recursion/" target="_blank">⭐️labuladong 题解</a></strong></p>
 <details><summary><strong>labuladong 思路</strong></summary>
+
+
+<div id="labuladong_solution_zh">
 
 ## 基本思路
 
@@ -63,7 +66,7 @@
 
 明白了函数的定义，再来看这个问题。比如说我们想反转这个链表：
 
-![](https://labuladong.github.io/pictures/反转链表/1.jpg)
+![](https://labuladong.online/algo/images/reverse-linked-list/1.jpg)
 
 那么输入 `reverse(head)` 后，会在这里进行递归：
 
@@ -73,11 +76,11 @@ ListNode last = reverse(head.next);
 
 不要跳进递归（你的脑袋能压几个栈呀？），而是要根据刚才的函数定义，来弄清楚这段代码会产生什么结果：
 
-![](https://labuladong.github.io/pictures/反转链表/2.jpg)
+![](https://labuladong.online/algo/images/reverse-linked-list/2.jpg)
 
 这个 `reverse(head.next)` 执行完成后，整个链表就成了这样：
 
-![](https://labuladong.github.io/pictures/反转链表/3.jpg)
+![](https://labuladong.online/algo/images/reverse-linked-list/3.jpg)
 
 并且根据函数定义，`reverse` 函数会返回反转之后的头结点，我们用变量 `last` 接收了。
 
@@ -87,7 +90,7 @@ ListNode last = reverse(head.next);
 head.next.next = head;
 ```
 
-![](https://labuladong.github.io/pictures/反转链表/4.jpg)
+![](https://labuladong.online/algo/images/reverse-linked-list/4.jpg)
 
 接下来：
 
@@ -96,17 +99,24 @@ head.next = null;
 return last;
 ```
 
-![](https://labuladong.github.io/pictures/反转链表/5.jpg)
+![](https://labuladong.online/algo/images/reverse-linked-list/5.jpg)
 
 神不神奇，这样整个链表就反转过来了！
 
-**详细题解：[递归魔法：反转单链表](https://labuladong.online/algo/fname.html?fname=递归反转链表的一部分)**
+**详细题解**：
+  - [单链表的花式反转方法汇总](https://labuladong.online/algo/data-structure/reverse-linked-list-recursion/)
 
-**标签：单链表**
+</div>
+
+
+
+
+
+<div id="solution">
 
 ## 解法代码
 
-提示：🟢 标记的是我写的解法代码，🤖 标记的是 chatGPT 翻译的多语言解法代码。如有错误，可以 [点这里](https://github.com/labuladong/fucking-algorithm/issues/1113) 反馈和修正。
+
 
 <div class="tab-panel"><div class="tab-nav">
 <button data-tab-item="cpp" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">cpp🤖</button>
@@ -122,26 +132,18 @@ return last;
 <div data-tab-item="cpp" class="tab-item " data-tab-group="default"><div class="highlight">
 
 ```cpp
-// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
-// 本代码已经通过力扣的测试用例，应该可直接成功提交。
+// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
 
-/**
- * Definition for singly-linked list.
- * struct ListNode {
- *     int val;
- *     ListNode *next;
- *     ListNode(int x) : val(x), next(NULL) {}
- * };
- */
 class Solution {
 public:
     ListNode* reverseList(ListNode* head) {
-        if (head == NULL || head->next == NULL) {
+        if (head == nullptr || head->next == nullptr) {
             return head;
         }
-        ListNode* last = reverseList(head->next);/**<extend up -200>![](https://labuladong.github.io/pictures/反转链表/3.jpg) */
-        head->next->next = head;/**<extend up -200>![](https://labuladong.github.io/pictures/反转链表/4.jpg) */
-        head->next = NULL;/**<extend up -200>![](https://labuladong.github.io/pictures/反转链表/5.jpg) */
+        ListNode* last = reverseList(head->next);
+        head->next->next = head;
+        head->next = nullptr;
         return last;
     }
 };
@@ -152,16 +154,17 @@ public:
 <div data-tab-item="python" class="tab-item " data-tab-group="default"><div class="highlight">
 
 ```python
-# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
-# 本代码已经通过力扣的测试用例，应该可直接成功提交。
+# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译。
+# 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
 
 class Solution:
+    # public ListNode reverseList(ListNode head) {
     def reverseList(self, head: ListNode) -> ListNode:
         if head is None or head.next is None:
             return head
-        last = self.reverseList(head.next) # <extend up -200>![](https://labuladong.github.io/pictures/反转链表/3.jpg) #
-        head.next.next = head # <extend up -200>![](https://labuladong.github.io/pictures/反转链表/4.jpg) #
-        head.next = None # <extend up -200>![](https://labuladong.github.io/pictures/反转链表/5.jpg) #
+        last = self.reverseList(head.next) # <extend up -200>![](https://labuladong.online/algo/images/reverse-linked-list/3.jpg) #
+        head.next.next = head # <extend up -200>![](https://labuladong.online/algo/images/reverse-linked-list/4.jpg) #
+        head.next = None # <extend up -200>![](https://labuladong.online/algo/images/reverse-linked-list/5.jpg) #
         return last
 ```
 
@@ -175,9 +178,9 @@ class Solution {
         if (head == null || head.next == null) {
             return head;
         }
-        ListNode last = reverseList(head.next);/**<extend up -200>![](https://labuladong.github.io/pictures/反转链表/3.jpg) */
-        head.next.next = head;/**<extend up -200>![](https://labuladong.github.io/pictures/反转链表/4.jpg) */
-        head.next = null;/**<extend up -200>![](https://labuladong.github.io/pictures/反转链表/5.jpg) */
+        ListNode last = reverseList(head.next);/**<extend up -200>![](https://labuladong.online/algo/images/reverse-linked-list/3.jpg) */
+        head.next.next = head;/**<extend up -200>![](https://labuladong.online/algo/images/reverse-linked-list/4.jpg) */
+        head.next = null;/**<extend up -200>![](https://labuladong.online/algo/images/reverse-linked-list/5.jpg) */
         return last;
     }
 }
@@ -188,25 +191,19 @@ class Solution {
 <div data-tab-item="go" class="tab-item " data-tab-group="default"><div class="highlight">
 
 ```go
-// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
-// 本代码已经通过力扣的测试用例，应该可直接成功提交。
+// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
 
 func reverseList(head *ListNode) *ListNode {
     if head == nil || head.Next == nil {
         return head
     }
     last := reverseList(head.Next)
-    /* <extend up - 200>
-    ![](https://labuladong.github.io/pictures/反转链表/3.jpg)
-    */
+    // ![](https://labuladong.online/algo/images/reverse-linked-list/3.jpg)
     head.Next.Next = head
-    /* <extend up - 200>
-    ![](https://labuladong.github.io/pictures/反转链表/4.jpg)
-    */
+    // ![](https://labuladong.online/algo/images/reverse-linked-list/4.jpg)
     head.Next = nil
-    /* <extend up - 200>
-    ![](https://labuladong.github.io/pictures/反转链表/5.jpg)
-    */
+    // ![](https://labuladong.online/algo/images/reverse-linked-list/5.jpg)
     return last
 }
 ```
@@ -216,8 +213,34 @@ func reverseList(head *ListNode) *ListNode {
 <div data-tab-item="javascript" class="tab-item " data-tab-group="default"><div class="highlight">
 
 ```javascript
-// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译，旨在帮助不同背景的读者理解算法逻辑。
-// 本代码已经通过力扣的测试用例，应该可直接成功提交。
+// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+var reverseList = function(head) {
+    if (head === null || head.next === null) {
+        return head;
+    }
+    var last = reverseList(head.next);
+    head.next.next = head;
+    head.next = null;
+    return last;
+};
+```
+
+</div></div>
+</div></div>
+
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>🎃🎃 算法可视化 🎃🎃</strong></summary><div id="data_reverse-linked-list"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<div id="iframe_reverse-linked-list"></div></div>
+</details><hr /><br />
+
+</div>
+</details>
+</div>
+
+
+
+该可直接成功提交。
 
 /**
  * Definition for singly-linked list.
