--- a/quiz/leetcode/editor/cn/doc/content/[695]岛屿的最大面积.md
+++ b/quiz/leetcode/editor/cn/doc/content/[695]岛屿的最大面积.md
@@ -35,3 +35,288 @@
 </ul>
 
 <div><div>Related Topics</div><div><li>深度优先搜索</li><li>广度优先搜索</li><li>并查集</li><li>数组</li><li>矩阵</li></div></div><br><div><li>👍 1158</li><li>👎 0</li></div>
+
+<div id="labuladong"><hr>
+
+**通知：为满足广大读者的需求，网站上架 [速成目录](https://labuladong.online/algo/intro/quick-learning-plan/)，如有需要可以看下，谢谢大家的支持~**
+
+
+
+<p><strong><a href="https://labuladong.online/algo/frequency-interview/island-dfs-summary/" target="_blank">⭐️labuladong 题解</a></strong></p>
+<details><summary><strong>labuladong 思路</strong></summary>
+
+
+<div id="labuladong_solution_zh">
+
+## 基本思路
+
+这题属于岛屿系列问题，岛屿系列问题的基本思路框架是 [✔ ✨200. 岛屿数量](/problems/number-of-islands/) 这道题，没看过的先看这篇。
+
+这题的大体思路和 [✔ ✨200. 岛屿数量](/problems/number-of-islands/) 完全一样，只不过 `dfs` 函数淹没岛屿的同时，还应该想办法记录这个岛屿的面积。
+
+我们可以给 `dfs` 函数设置返回值，记录每次淹没的陆地的个数，直接看解法吧。
+
+**详细题解**：
+  - [一文秒杀所有岛屿题目](https://labuladong.online/algo/frequency-interview/island-dfs-summary/)
+
+</div>
+
+
+
+
+
+<div id="solution">
+
+## 解法代码
+
+
+
+<div class="tab-panel"><div class="tab-nav">
+<button data-tab-item="cpp" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">cpp🤖</button>
+
+<button data-tab-item="python" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">python🤖</button>
+
+<button data-tab-item="java" class="tab-nav-button btn active" data-tab-group="default" onclick="switchTab(this)">java🟢</button>
+
+<button data-tab-item="go" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">go🤖</button>
+
+<button data-tab-item="javascript" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">javascript🤖</button>
+</div><div class="tab-content">
+<div data-tab-item="cpp" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```cpp
+// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+#include <vector>
+#include <algorithm>
+using namespace std;
+
+class Solution {
+public:
+    int maxAreaOfIsland(vector<vector<int>>& grid) {
+        // 记录岛屿的最大面积
+        int res = 0;
+        int m = grid.size(), n = grid[0].size();
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == 1) {
+                    // 淹没岛屿，并更新最大岛屿面积
+                    res = max(res, dfs(grid, i, j));
+                }
+            }
+        }
+        return res;
+    }
+
+    // 淹没与 (i, j) 相邻的陆地，并返回淹没的陆地面积
+    int dfs(vector<vector<int>>& grid, int i, int j) {
+        int m = grid.size(), n = grid[0].size();
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            // 超出索引边界
+            return 0;
+        }
+        if (grid[i][j] == 0) {
+            // 已经是海水了
+            return 0;
+        }
+        // 将 (i, j) 变成海水
+        grid[i][j] = 0;
+
+        return dfs(grid, i + 1, j)
+                + dfs(grid, i, j + 1)
+                + dfs(grid, i - 1, j)
+                + dfs(grid, i, j - 1) + 1;
+    }
+};
+```
+
+</div></div>
+
+<div data-tab-item="python" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```python
+# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译。
+# 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution:
+    def maxAreaOfIsland(self, grid: List[List[int]]) -> int:
+        # 记录岛屿的最大面积
+        res = 0
+        m = len(grid)
+        n = len(grid[0])
+        for i in range(m):
+            for j in range(n):
+                if grid[i][j] == 1:
+                    # 淹没岛屿，并更新最大岛屿面积
+                    res = max(res, self.dfs(grid, i, j))
+        return res
+
+    # 淹没与 (i, j) 相邻的陆地，并返回淹没的陆地面积
+    def dfs(self, grid: List[List[int]], i: int, j: int) -> int:
+        m = len(grid)
+        n = len(grid[0])
+        if i < 0 or j < 0 or i >= m or j >= n:
+            # 超出索引边界
+            return 0
+        if grid[i][j] == 0:
+            # 已经是海水了
+            return 0
+        # 将 (i, j) 变成海水
+        grid[i][j] = 0
+
+        return (self.dfs(grid, i + 1, j)
+                + self.dfs(grid, i, j + 1)
+                + self.dfs(grid, i - 1, j)
+                + self.dfs(grid, i, j - 1) + 1)
+```
+
+</div></div>
+
+<div data-tab-item="java" class="tab-item active" data-tab-group="default"><div class="highlight">
+
+```java
+class Solution {
+    public int maxAreaOfIsland(int[][] grid) {
+        // 记录岛屿的最大面积
+        int res = 0;
+        int m = grid.length, n = grid[0].length;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == 1) {
+                    // 淹没岛屿，并更新最大岛屿面积
+                    res = Math.max(res, dfs(grid, i, j));
+                }
+            }
+        }
+        return res;
+    }
+
+    // 淹没与 (i, j) 相邻的陆地，并返回淹没的陆地面积
+    int dfs(int[][] grid, int i, int j) {
+        int m = grid.length, n = grid[0].length;
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            // 超出索引边界
+            return 0;
+        }
+        if (grid[i][j] == 0) {
+            // 已经是海水了
+            return 0;
+        }
+        // 将 (i, j) 变成海水
+        grid[i][j] = 0;
+
+        return dfs(grid, i + 1, j)
+                + dfs(grid, i, j + 1)
+                + dfs(grid, i - 1, j)
+                + dfs(grid, i, j - 1) + 1;
+    }
+}
+```
+
+</div></div>
+
+<div data-tab-item="go" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```go
+// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+func maxAreaOfIsland(grid [][]int) int {
+    // 记录岛屿的最大面积
+    res := 0
+    m, n := len(grid), len(grid[0])
+    for i := 0; i < m; i++ {
+        for j := 0; j < n; j++ {
+            if grid[i][j] == 1 {
+                // 淹没岛屿，并更新最大岛屿面积
+                res = max(res, dfs(grid, i, j))
+            }
+        }
+    }
+    return res
+}
+
+// 淹没与 (i, j) 相邻的陆地，并返回淹没的陆地面积
+func dfs(grid [][]int, i, j int) int {
+    m, n := len(grid), len(grid[0])
+    if i < 0 || j < 0 || i >= m || j >= n {
+        // 超出索引边界
+        return 0
+    }
+    if grid[i][j] == 0 {
+        // 已经是海水了
+        return 0
+    }
+    // 将 (i, j) 变成海水
+    grid[i][j] = 0
+
+    return dfs(grid, i+1, j) +
+           dfs(grid, i, j+1) +
+           dfs(grid, i-1, j) +
+           dfs(grid, i, j-1) + 1
+}
+
+func max(a, b int) int {
+    if a > b {
+        return a
+    }
+    return b
+}
+```
+
+</div></div>
+
+<div data-tab-item="javascript" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```javascript
+// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+var maxAreaOfIsland = function(grid) {
+    // 记录岛屿的最大面积
+    let res = 0;
+    let m = grid.length, n = grid[0].length;
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid[i][j] == 1) {
+                // 淹没岛屿，并更新最大岛屿面积
+                res = Math.max(res, dfs(grid, i, j));
+            }
+        }
+    }
+    return res;
+};
+
+// 淹没与 (i, j) 相邻的陆地，并返回淹没的陆地面积
+var dfs = function(grid, i, j) {
+    let m = grid.length, n = grid[0].length;
+    if (i < 0 || j < 0 || i >= m || j >= n) {
+        // 超出索引边界
+        return 0;
+    }
+    if (grid[i][j] == 0) {
+        // 已经是海水了
+        return 0;
+    }
+    // 将 (i, j) 变成海水
+    grid[i][j] = 0;
+
+    return dfs(grid, i + 1, j)
+            + dfs(grid, i, j + 1)
+            + dfs(grid, i - 1, j)
+            + dfs(grid, i, j - 1) + 1;
+};
+```
+
+</div></div>
+</div></div>
+
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>👾👾 算法可视化 👾👾</strong></summary><div id="data_max-area-of-island"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<div id="iframe_max-area-of-island"></div></div>
+</details><hr /><br />
+
+</div>
+</details>
+</div>
+
