--- a/quiz/leetcode/editor/cn/doc/content/[1020]飞地的数量.md
+++ b/quiz/leetcode/editor/cn/doc/content/[1020]飞地的数量.md
@@ -34,3 +34,286 @@
 </ul>
 
 <div><div>Related Topics</div><div><li>深度优先搜索</li><li>广度优先搜索</li><li>并查集</li><li>数组</li><li>矩阵</li></div></div><br><div><li>👍 300</li><li>👎 0</li></div>
+
+<div id="labuladong"><hr>
+
+**通知：为满足广大读者的需求，网站上架 [速成目录](https://labuladong.online/algo/intro/quick-learning-plan/)，如有需要可以看下，谢谢大家的支持~**
+
+
+
+<p><strong><a href="https://labuladong.online/algo/frequency-interview/island-dfs-summary/" target="_blank">⭐️labuladong 题解</a></strong></p>
+<details><summary><strong>labuladong 思路</strong></summary>
+
+
+<div id="labuladong_solution_zh">
+
+## 基本思路
+
+这题属于岛屿系列问题，岛屿系列问题的基本思路框架是 [✔ ✨200. 岛屿数量](/problems/number-of-islands/) 这道题，没看过的先看这篇。
+
+这道题和 [✔ ✨1254. 统计封闭岛屿的数目](/problems/number-of-closed-islands/) 基本一样，只是后者让你算封闭岛屿的数量，这题让你算这些封闭岛屿的陆地总数，稍微改改代码就行了。
+
+注意这题中 `1` 代表陆地，`0` 代表海水。
+
+**详细题解**：
+  - [一文秒杀所有岛屿题目](https://labuladong.online/algo/frequency-interview/island-dfs-summary/)
+
+</div>
+
+
+
+
+
+<div id="solution">
+
+## 解法代码
+
+
+
+<div class="tab-panel"><div class="tab-nav">
+<button data-tab-item="cpp" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">cpp🤖</button>
+
+<button data-tab-item="python" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">python🤖</button>
+
+<button data-tab-item="java" class="tab-nav-button btn active" data-tab-group="default" onclick="switchTab(this)">java🟢</button>
+
+<button data-tab-item="go" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">go🤖</button>
+
+<button data-tab-item="javascript" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">javascript🤖</button>
+</div><div class="tab-content">
+<div data-tab-item="cpp" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```cpp
+// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution {
+public:
+    int numEnclaves(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size();
+
+        for (int i = 0; i < m; i++) {
+            dfs(grid, i, 0);
+            dfs(grid, i, n - 1);
+        }
+
+        for (int j = 0; j < n; j++) {
+            dfs(grid, 0, j);
+            dfs(grid, m - 1, j);
+        }
+
+        int res = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == 1) {
+                    res += 1;
+                }
+            }
+        }
+        return res;
+    }
+
+    void dfs(vector<vector<int>>& grid, int i, int j) {
+        int m = grid.size(), n = grid[0].size();
+        if (i < 0 || j < 0 || i >= m || j >= n || grid[i][j] == 0) {
+            return;
+        }
+
+        grid[i][j] = 0;
+
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+};
+```
+
+</div></div>
+
+<div data-tab-item="python" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```python
+# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译。
+# 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution:
+    def numEnclaves(self, grid: List[List[int]]) -> int:
+        m, n = len(grid), len(grid[0])
+
+        for i in range(m):
+            self.dfs(grid, i, 0)
+            self.dfs(grid, i, n - 1)
+
+        for j in range(n):
+            self.dfs(grid, 0, j)
+            self.dfs(grid, m - 1, j)
+
+        res = 0
+        for i in range(m):
+            for j in range(n):
+                if grid[i][j] == 1:
+                    res += 1
+        return res
+
+    def dfs(self, grid: List[List[int]], i: int, j: int) -> None:
+        m, n = len(grid), len(grid[0])
+        if i < 0 or j < 0 or i >= m or j >= n or grid[i][j] == 0:
+            return
+
+        grid[i][j] = 0
+
+        self.dfs(grid, i + 1, j)
+        self.dfs(grid, i, j + 1)
+        self.dfs(grid, i - 1, j)
+        self.dfs(grid, i, j - 1)
+```
+
+</div></div>
+
+<div data-tab-item="java" class="tab-item active" data-tab-group="default"><div class="highlight">
+
+```java
+class Solution {
+    public int numEnclaves(int[][] grid) {
+        int m = grid.length, n = grid[0].length;
+
+        for (int i = 0; i < m; i++) {
+            dfs(grid, i, 0);
+            dfs(grid, i, n - 1);
+        }
+
+        for (int j = 0; j < n; j++) {
+            dfs(grid, 0, j);
+            dfs(grid, m - 1, j);
+        }
+
+        int res = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == 1) {
+                    res += 1;
+                }
+            }
+        }
+        return res;
+    }
+
+    void dfs(int[][] grid, int i, int j) {
+        int m = grid.length, n = grid[0].length;
+        if (i < 0 || j < 0 || i >= m || j >= n || grid[i][j] == 0) {
+            return;
+        }
+
+        grid[i][j] = 0;
+
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+}
+```
+
+</div></div>
+
+<div data-tab-item="go" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```go
+// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+func numEnclaves(grid [][]int) int {
+    m, n := len(grid), len(grid[0])
+
+    var dfs func(i, j int)
+    dfs = func(i, j int) {
+        if i < 0 || j < 0 || i >= m || j >= n || grid[i][j] == 0 {
+            return
+        }
+        grid[i][j] = 0
+        dfs(i+1, j)
+        dfs(i, j+1)
+        dfs(i-1, j)
+        dfs(i, j-1)
+    }
+
+    for i := 0; i < m; i++ {
+        dfs(i, 0)
+        dfs(i, n-1)
+    }
+
+    for j := 0; j < n; j++ {
+        dfs(0, j)
+        dfs(m-1, j)
+    }
+
+    res := 0
+    for i := 0; i < m; i++ {
+        for j := 0; j < n; j++ {
+            if grid[i][j] == 1 {
+                res++
+            }
+        }
+    }
+    return res
+}
+```
+
+</div></div>
+
+<div data-tab-item="javascript" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```javascript
+// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+var numEnclaves = function(grid) {
+    const m = grid.length, n = grid[0].length;
+
+    const dfs = function(grid, i, j) {
+        if (i < 0 || j < 0 || i >= m || j >= n || grid[i][j] === 0) {
+            return;
+        }
+
+        grid[i][j] = 0;
+
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    };
+
+    for (let i = 0; i < m; i++) {
+        dfs(grid, i, 0);
+        dfs(grid, i, n - 1);
+    }
+
+    for (let j = 0; j < n; j++) {
+        dfs(grid, 0, j);
+        dfs(grid, m - 1, j);
+    }
+
+    let res = 0;
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid[i][j] === 1) {
+                res += 1;
+            }
+        }
+    }
+    return res;
+};
+```
+
+</div></div>
+</div></div>
+
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>🎃🎃 算法可视化 🎃🎃</strong></summary><div id="data_number-of-enclaves"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<div id="iframe_number-of-enclaves"></div></div>
+</details><hr /><br />
+
+</div>
+</details>
+</div>
+
