--- a/quiz/leetcode/editor/cn/doc/content/[1254]统计封闭岛屿的数目.md
+++ b/quiz/leetcode/editor/cn/doc/content/[1254]统计封闭岛屿的数目.md
@@ -46,3 +46,335 @@
 </ul>
 
 <div><div>Related Topics</div><div><li>深度优先搜索</li><li>广度优先搜索</li><li>并查集</li><li>数组</li><li>矩阵</li></div></div><br><div><li>👍 330</li><li>👎 0</li></div>
+
+<div id="labuladong"><hr>
+
+**通知：为满足广大读者的需求，网站上架 [速成目录](https://labuladong.online/algo/intro/quick-learning-plan/)，如有需要可以看下，谢谢大家的支持~**
+
+
+
+<p><strong><a href="https://labuladong.online/algo/frequency-interview/island-dfs-summary/" target="_blank">⭐️labuladong 题解</a></strong></p>
+<details><summary><strong>labuladong 思路</strong></summary>
+
+
+<div id="labuladong_solution_zh">
+
+## 基本思路
+
+岛屿系列问题的基本思路框架是 [✔ ✨200. 岛屿数量](/problems/number-of-islands/) 这道题，没看过的先看这篇。
+
+如何判断「封闭岛屿」呢？其实很简单，把 [✔ ✨200. 岛屿数量](/problems/number-of-islands/) 中那些靠边的岛屿排除掉，剩下的不就是「封闭岛屿」了吗？
+
+有了这个思路，就可以直接写出代码了，注意这题规定 `0` 表示陆地，用 `1` 表示海水。
+
+**详细题解**：
+  - [一文秒杀所有岛屿题目](https://labuladong.online/algo/frequency-interview/island-dfs-summary/)
+
+</div>
+
+
+
+
+
+<div id="solution">
+
+## 解法代码
+
+
+
+<div class="tab-panel"><div class="tab-nav">
+<button data-tab-item="cpp" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">cpp🤖</button>
+
+<button data-tab-item="python" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">python🤖</button>
+
+<button data-tab-item="java" class="tab-nav-button btn active" data-tab-group="default" onclick="switchTab(this)">java🟢</button>
+
+<button data-tab-item="go" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">go🤖</button>
+
+<button data-tab-item="javascript" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">javascript🤖</button>
+</div><div class="tab-content">
+<div data-tab-item="cpp" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```cpp
+// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+#include <vector>
+
+class Solution {
+public:
+    // 主函数：计算封闭岛屿的数量
+    int closedIsland(std::vector<std::vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size();
+        for (int j = 0; j < n; j++) {
+            // 把靠上边的岛屿淹掉
+            dfs(grid, 0, j);
+            // 把靠下边的岛屿淹掉
+            dfs(grid, m - 1, j);
+        }
+        for (int i = 0; i < m; i++) {
+            // 把靠左边的岛屿淹掉
+            dfs(grid, i, 0);
+            // 把靠右边的岛屿淹掉
+            dfs(grid, i, n - 1);
+        }
+        // 遍历 grid，剩下的岛屿都是封闭岛屿
+        int res = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == 0) {
+                    res++;
+                    dfs(grid, i, j);
+                }
+            }
+        }
+        return res;
+    }
+
+    // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    void dfs(std::vector<std::vector<int>>& grid, int i, int j) {
+        int m = grid.size(), n = grid[0].size();
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            return;
+        }
+        if (grid[i][j] == 1) {
+            // 已经是海水了
+            return;
+        }
+        // 将 (i, j) 变成海水
+        grid[i][j] = 1;
+        // 淹没上下左右的陆地
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+};
+```
+
+</div></div>
+
+<div data-tab-item="python" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```python
+# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译。
+# 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution:
+    # 主函数：计算封闭岛屿的数量
+    def closedIsland(self, grid):
+        m, n = len(grid), len(grid[0])
+        for j in range(n):
+            # 把靠上边的岛屿淹掉
+            self.dfs(grid, 0, j)
+            # 把靠下边的岛屿淹掉
+            self.dfs(grid, m - 1, j)
+        for i in range(m):
+            # 把靠左边的岛屿淹掉
+            self.dfs(grid, i, 0)
+            # 把靠右边的岛屿淹掉
+            self.dfs(grid, i, n - 1)
+        # 遍历 grid，剩下的岛屿都是封闭岛屿
+        res = 0
+        for i in range(m):
+            for j in range(n):
+                if grid[i][j] == 0:
+                    res += 1
+                    self.dfs(grid, i, j)
+        return res
+
+    # 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    def dfs(self, grid, i, j):
+        m, n = len(grid), len(grid[0])
+        if i < 0 or j < 0 or i >= m or j >= n:
+            return
+        if grid[i][j] == 1:
+            # 已经是海水了
+            return
+        # 将 (i, j) 变成海水
+        grid[i][j] = 1
+        # 淹没上下左右的陆地
+        self.dfs(grid, i + 1, j)
+        self.dfs(grid, i, j + 1)
+        self.dfs(grid, i - 1, j)
+        self.dfs(grid, i, j - 1)
+```
+
+</div></div>
+
+<div data-tab-item="java" class="tab-item active" data-tab-group="default"><div class="highlight">
+
+```java
+class Solution {
+     // 主函数：计算封闭岛屿的数量
+    public int closedIsland(int[][] grid) {
+        int m = grid.length, n = grid[0].length;
+        for (int j = 0; j < n; j++) {
+            // 把靠上边的岛屿淹掉
+            dfs(grid, 0, j);
+            // 把靠下边的岛屿淹掉
+            dfs(grid, m - 1, j);
+        }
+        for (int i = 0; i < m; i++) {
+            // 把靠左边的岛屿淹掉
+            dfs(grid, i, 0);
+            // 把靠右边的岛屿淹掉
+            dfs(grid, i, n - 1);
+        }
+        // 遍历 grid，剩下的岛屿都是封闭岛屿
+        int res = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid[i][j] == 0) {
+                    res++;
+                    dfs(grid, i, j);
+                }
+            }
+        }
+        return res;
+    }
+
+    // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    void dfs(int[][] grid, int i, int j) {
+        int m = grid.length, n = grid[0].length;
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            return;
+        }
+        if (grid[i][j] == 1) {
+            // 已经是海水了
+            return;
+        }
+        // 将 (i, j) 变成海水
+        grid[i][j] = 1;
+        // 淹没上下左右的陆地
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+}
+```
+
+</div></div>
+
+<div data-tab-item="go" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```go
+// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+// 主函数：计算封闭岛屿的数量
+func closedIsland(grid [][]int) int {
+    m, n := len(grid), len(grid[0])
+    for j := 0; j < n; j++ {
+        // 把靠上边的岛屿淹掉
+        dfs(grid, 0, j)
+        // 把靠下边的岛屿淹掉
+        dfs(grid, m-1, j)
+    }
+    for i := 0; i < m; i++ {
+        // 把靠左边的岛屿淹掉
+        dfs(grid, i, 0)
+        // 把靠右边的岛屿淹掉
+        dfs(grid, i, n-1)
+    }
+    // 遍历 grid，剩下的岛屿都是封闭岛屿
+    res := 0
+    for i := 0; i < m; i++ {
+        for j := 0; j < n; j++ {
+            if grid[i][j] == 0 {
+                res++
+                dfs(grid, i, j)
+            }
+        }
+    }
+    return res
+}
+
+// 从 (i, j) 开始，将与之相邻的陆地都变成海水
+func dfs(grid [][]int, i, j int) {
+    m, n := len(grid), len(grid[0])
+    if i < 0 || j < 0 || i >= m || j >= n {
+        return
+    }
+    if grid[i][j] == 1 {
+        // 已经是海水了
+        return
+    }
+    // 将 (i, j) 变成海水
+    grid[i][j] = 1
+    // 淹没上下左右的陆地
+    dfs(grid, i+1, j)
+    dfs(grid, i, j+1)
+    dfs(grid, i-1, j)
+    dfs(grid, i, j-1)
+}
+```
+
+</div></div>
+
+<div data-tab-item="javascript" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```javascript
+// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+var closedIsland = function(grid) {
+    // 主函数：计算封闭岛屿的数量
+    let m = grid.length, n = grid[0].length;
+    for (let j = 0; j < n; j++) {
+        // 把靠上边的岛屿淹掉
+        dfs(grid, 0, j);
+        // 把靠下边的岛屿淹掉
+        dfs(grid, m - 1, j);
+    }
+    for (let i = 0; i < m; i++) {
+        // 把靠左边的岛屿淹掉
+        dfs(grid, i, 0);
+        // 把靠右边的岛屿淹掉
+        dfs(grid, i, n - 1);
+    }
+    // 遍历 grid，剩下的岛屿都是封闭岛屿
+    let res = 0;
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid[i][j] === 0) {
+                res++;
+                dfs(grid, i, j);
+            }
+        }
+    }
+    return res;
+
+    // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    function dfs(grid, i, j) {
+        let m = grid.length, n = grid[0].length;
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            return;
+        }
+        if (grid[i][j] === 1) {
+            // 已经是海水了
+            return;
+        }
+        // 将 (i, j) 变成海水
+        grid[i][j] = 1;
+        // 淹没上下左右的陆地
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+};
+```
+
+</div></div>
+</div></div>
+
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>🥳🥳 算法可视化 🥳🥳</strong></summary><div id="data_number-of-closed-islands"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<div id="iframe_number-of-closed-islands"></div></div>
+</details><hr /><br />
+
+</div>
+</details>
+</div>
+
