--- a/quiz/leetcode/editor/cn/doc/content/[1905]统计子岛屿.md
+++ b/quiz/leetcode/editor/cn/doc/content/[1905]统计子岛屿.md
@@ -32,3 +32,306 @@ grid2 中标红的 1 区域是子岛屿，总共有 2 个子岛屿。
 </ul>
 
 <div><div>Related Topics</div><div><li>深度优先搜索</li><li>广度优先搜索</li><li>并查集</li><li>数组</li><li>矩阵</li></div></div><br><div><li>👍 149</li><li>👎 0</li></div>
+
+<div id="labuladong"><hr>
+
+**通知：为满足广大读者的需求，网站上架 [速成目录](https://labuladong.online/algo/intro/quick-learning-plan/)，如有需要可以看下，谢谢大家的支持~**
+
+
+
+<p><strong><a href="https://labuladong.online/algo/frequency-interview/island-dfs-summary/" target="_blank">⭐️labuladong 题解</a></strong></p>
+<details><summary><strong>labuladong 思路</strong></summary>
+
+
+<div id="labuladong_solution_zh">
+
+## 基本思路
+
+这题属于岛屿系列问题，岛屿系列问题的基本思路框架是 [✔ ✨200. 岛屿数量](/problems/number-of-islands/) 这道题，没看过的先看这篇。
+
+**这道题的关键在于，如何快速判断子岛屿**？
+
+什么情况下 `grid2` 中的一个岛屿 `B` 是 `grid1` 中的一个岛屿 `A` 的子岛？
+
+当岛屿 `B` 中所有陆地在岛屿 `A` 中也是陆地的时候，岛屿 `B` 是岛屿 `A` 的子岛。
+
+**反过来说，如果岛屿 `B` 中存在一片陆地，在岛屿 `A` 的对应位置是海水，那么岛屿 `B` 就不是岛屿 `A` 的子岛**。
+
+那么，我们只要遍历 `grid2` 中的所有岛屿，把那些不可能是子岛的岛屿排除掉，剩下的就是子岛。
+
+**详细题解**：
+  - [一文秒杀所有岛屿题目](https://labuladong.online/algo/frequency-interview/island-dfs-summary/)
+
+</div>
+
+
+
+
+
+<div id="solution">
+
+## 解法代码
+
+
+
+<div class="tab-panel"><div class="tab-nav">
+<button data-tab-item="cpp" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">cpp🤖</button>
+
+<button data-tab-item="python" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">python🤖</button>
+
+<button data-tab-item="java" class="tab-nav-button btn active" data-tab-group="default" onclick="switchTab(this)">java🟢</button>
+
+<button data-tab-item="go" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">go🤖</button>
+
+<button data-tab-item="javascript" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">javascript🤖</button>
+</div><div class="tab-content">
+<div data-tab-item="cpp" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```cpp
+// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+#include <vector>
+using namespace std;
+
+class Solution {
+public:
+    int countSubIslands(vector<vector<int>>& grid1, vector<vector<int>>& grid2) {
+        int m = grid1.size(), n = grid1[0].size();
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid1[i][j] == 0 && grid2[i][j] == 1) {
+                    // 这个岛屿肯定不是子岛，淹掉
+                    dfs(grid2, i, j);
+                }
+            }
+        }
+        // 现在 grid2 中剩下的岛屿都是子岛，计算岛屿数量
+        int res = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid2[i][j] == 1) {
+                    res++;
+                    dfs(grid2, i, j);
+                }
+            }
+        }
+        return res;
+    }
+
+    // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    void dfs(vector<vector<int>>& grid, int i, int j) {
+        int m = grid.size(), n = grid[0].size();
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            return;
+        }
+        if (grid[i][j] == 0) {
+            return;
+        }
+
+        grid[i][j] = 0;
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+};
+```
+
+</div></div>
+
+<div data-tab-item="python" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```python
+# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译。
+# 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution:
+    def countSubIslands(self, grid1: List[List[int]], grid2: List[List[int]]) -> int:
+        m, n = len(grid1), len(grid1[0])
+        for i in range(m):
+            for j in range(n):
+                if grid1[i][j] == 0 and grid2[i][j] == 1:
+                    # 这个岛屿肯定不是子岛，淹掉
+                    self.dfs(grid2, i, j)
+        # 现在 grid2 中剩下的岛屿都是子岛，计算岛屿数量
+        res = 0
+        for i in range(m):
+            for j in range(n):
+                if grid2[i][j] == 1:
+                    res += 1
+                    self.dfs(grid2, i, j)
+        return res
+
+    # 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    def dfs(self, grid: List[List[int]], i: int, j: int) -> None:
+        m, n = len(grid), len(grid[0])
+        if i < 0 or j < 0 or i >= m or j >= n:
+            return
+        if grid[i][j] == 0:
+            return
+
+        grid[i][j] = 0
+        self.dfs(grid, i + 1, j)
+        self.dfs(grid, i, j + 1)
+        self.dfs(grid, i - 1, j)
+        self.dfs(grid, i, j - 1)
+```
+
+</div></div>
+
+<div data-tab-item="java" class="tab-item active" data-tab-group="default"><div class="highlight">
+
+```java
+class Solution {
+    public int countSubIslands(int[][] grid1, int[][] grid2) {
+        int m = grid1.length, n = grid1[0].length;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid1[i][j] == 0 && grid2[i][j] == 1) {
+                    // 这个岛屿肯定不是子岛，淹掉
+                    dfs(grid2, i, j);
+                }
+            }
+        }
+        // 现在 grid2 中剩下的岛屿都是子岛，计算岛屿数量
+        int res = 0;
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (grid2[i][j] == 1) {
+                    res++;
+                    dfs(grid2, i, j);
+                }
+            }
+        }
+        return res;
+    }
+
+    // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+    void dfs(int[][] grid, int i, int j) {
+        int m = grid.length, n = grid[0].length;
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            return;
+        }
+        if (grid[i][j] == 0) {
+            return;
+        }
+
+        grid[i][j] = 0;
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+}
+```
+
+</div></div>
+
+<div data-tab-item="go" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```go
+// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+func countSubIslands(grid1 [][]int, grid2 [][]int) int {
+    m, n := len(grid1), len(grid1[0])
+    for i := 0; i < m; i++ {
+        for j := 0; j < n; j++ {
+            if grid1[i][j] == 0 && grid2[i][j] == 1 {
+                // 这个岛屿肯定不是子岛，淹掉
+                dfs(grid2, i, j)
+            }
+        }
+    }
+    // 现在 grid2 中剩下的岛屿都是子岛，计算岛屿数量
+    res := 0
+    for i := 0; i < m; i++ {
+        for j := 0; j < n; j++ {
+            if grid2[i][j] == 1 {
+                res++
+                dfs(grid2, i, j)
+            }
+        }
+    }
+    return res
+}
+
+// 从 (i, j) 开始，将与之相邻的陆地都变成海水
+func dfs(grid [][]int, i, j int) {
+    m, n := len(grid), len(grid[0])
+    if i < 0 || j < 0 || i >= m || j >= n {
+        return
+    }
+    if grid[i][j] == 0 {
+        return
+    }
+
+    grid[i][j] = 0
+    dfs(grid, i+1, j)
+    dfs(grid, i, j+1)
+    dfs(grid, i-1, j)
+    dfs(grid, i, j-1)
+}
+```
+
+</div></div>
+
+<div data-tab-item="javascript" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```javascript
+// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+var countSubIslands = function(grid1, grid2) {
+    let m = grid1.length, n = grid1[0].length;
+    const dfs = (grid, i, j) => {
+        // 从 (i, j) 开始，将与之相邻的陆地都变成海水
+        if (i < 0 || j < 0 || i >= m || j >= n) {
+            return;
+        }
+        if (grid[i][j] === 0) {
+            return;
+        }
+
+        grid[i][j] = 0;
+        dfs(grid, i + 1, j);
+        dfs(grid, i, j + 1);
+        dfs(grid, i - 1, j);
+        dfs(grid, i, j - 1);
+    }
+
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid1[i][j] === 0 && grid2[i][j] === 1) {
+                // 这个岛屿肯定不是子岛，淹掉
+                dfs(grid2, i, j);
+            }
+        }
+    }
+
+    // 现在 grid2 中剩下的岛屿都是子岛，计算岛屿数量
+    let res = 0;
+    for (let i = 0; i < m; i++) {
+        for (let j = 0; j < n; j++) {
+            if (grid2[i][j] === 1) {
+                res++;
+                dfs(grid2, i, j);
+            }
+        }
+    }
+    return res;
+};
+```
+
+</div></div>
+</div></div>
+
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>🍭🍭 算法可视化 🍭🍭</strong></summary><div id="data_count-sub-islands"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<div id="iframe_count-sub-islands"></div></div>
+</details><hr /><br />
+
+</div>
+</details>
+</div>
+
