all categories round 3

--- a/quiz/leetcode/editor/cn/doc/content/[55]跳跃游戏.md
+++ b/quiz/leetcode/editor/cn/doc/content/[55]跳跃游戏.md
@@ -203,11 +203,13 @@ var canJump = function(nums) {
 </div></div>
 </div></div>
 
-<hr /><details open hint-container details><summary style="font-size: medium"><strong>🍭🍭 算法可视化 🍭🍭</strong></summary><div id="data_jump-game"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>👾👾 算法可视化 👾👾</strong></summary><div id="data_jump-game"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
 <div id="iframe_jump-game"></div></div>
 </details><hr /><br />
 
 </div>
 </details>
 </div>
+
+
 
