--- a/quiz/leetcode/editor/cn/doc/content/[654]最大二叉树.md
+++ b/quiz/leetcode/editor/cn/doc/content/[654]最大二叉树.md
@@ -50,5 +50,250 @@
 
 <div id="labuladong"><hr>
 
+**通知：为满足广大读者的需求，网站上架 [速成目录](https://labuladong.online/algo/intro/quick-learning-plan/)，如有需要可以看下，谢谢大家的支持~**
+
+
+
+<p><strong><a href="https://labuladong.online/algo/data-structure/binary-tree-part2/" target="_blank">⭐️labuladong 题解</a></strong></p>
+<details><summary><strong>labuladong 思路</strong></summary>
+
+
+<div id="labuladong_solution_zh">
+
+## 基本思路
+
+前文 [手把手刷二叉树总结篇](https://labuladong.online/algo/essential-technique/binary-tree-summary/) 说过二叉树的递归算法可以分两类，一类是遍历二叉树的类型，一类是分解子问题的类型。
+
+前者较简单，只要运用二叉树的递归遍历框架即可；后者的关键在于明确递归函数的定义，然后利用这个定义。
+
+这题是后者，函数 `build` 的定义是根据输入的数组构造最大二叉树，那么只要我先要找到根节点，然后让 `build` 函数递归生成左右子树即可。
+
+**详细题解**：
+  - [二叉树心法（构造篇）](https://labuladong.online/algo/data-structure/binary-tree-part2/)
+
 </div>
+
+
+
+
+
+<div id="solution">
+
+## 解法代码
+
+
+
+<div class="tab-panel"><div class="tab-nav">
+<button data-tab-item="cpp" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">cpp🤖</button>
+
+<button data-tab-item="python" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">python🤖</button>
+
+<button data-tab-item="java" class="tab-nav-button btn active" data-tab-group="default" onclick="switchTab(this)">java🟢</button>
+
+<button data-tab-item="go" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">go🤖</button>
+
+<button data-tab-item="javascript" class="tab-nav-button btn " data-tab-group="default" onclick="switchTab(this)">javascript🤖</button>
+</div><div class="tab-content">
+<div data-tab-item="cpp" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```cpp
+// 注意：cpp 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+#include <vector>
+#include <climits>
+
+class Solution {
+public:
+    // 主函数
+    TreeNode* constructMaximumBinaryTree(std::vector<int>& nums) {
+        return build(nums, 0, nums.size() - 1);
+    }
+
+    // 定义：将 nums[lo..hi] 构造成符合条件的树，返回根节点
+    TreeNode* build(std::vector<int>& nums, int lo, int hi) {
+        // base case
+        if (lo > hi) {
+            return nullptr;
+        }
+
+        // 找到数组中的最大值和对应的索引
+        int index = -1, maxVal = INT_MIN;
+        for (int i = lo; i <= hi; i++) {
+            if (maxVal < nums[i]) {
+                index = i;
+                maxVal = nums[i];
+            }
+        }
+
+        TreeNode* root = new TreeNode(maxVal);
+        // 递归调用构造左右子树
+        root->left = build(nums, lo, index - 1);
+        root->right = build(nums, index + 1, hi);
+
+        return root;
+    }
+};
+```
+
+</div></div>
+
+<div data-tab-item="python" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```python
+# 注意：python 代码由 chatGPT🤖 根据我的 java 代码翻译。
+# 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+class Solution:
+    # 主函数
+    def constructMaximumBinaryTree(self, nums: List[int]) -> TreeNode:
+        return self.build(nums, 0, len(nums) - 1)
+
+    # 定义：将 nums[lo..hi] 构造成符合条件的树，返回根节点
+    def build(self, nums: List[int], lo: int, hi: int) -> TreeNode:
+        # base case
+        if lo > hi:
+            return None
+
+        # 找到数组中的最大值和对应的索引
+        index = -1
+        max_val = float('-inf')
+        for i in range(lo, hi + 1):
+            if max_val < nums[i]:
+                index = i
+                max_val = nums[i]
+
+        root = TreeNode(max_val)
+        # 递归调用构造左右子树
+        root.left = self.build(nums, lo, index - 1)
+        root.right = self.build(nums, index + 1, hi)
+
+        return root
+```
+
+</div></div>
+
+<div data-tab-item="java" class="tab-item active" data-tab-group="default"><div class="highlight">
+
+```java
+class Solution {
+    // 主函数
+    public TreeNode constructMaximumBinaryTree(int[] nums) {
+        return build(nums, 0, nums.length - 1);
+    }
+
+    // 定义：将 nums[lo..hi] 构造成符合条件的树，返回根节点
+    TreeNode build(int[] nums, int lo, int hi) {
+        // base case
+        if (lo > hi) {
+            return null;
+        }
+
+        // 找到数组中的最大值和对应的索引
+        int index = -1, maxVal = Integer.MIN_VALUE;
+        for (int i = lo; i <= hi; i++) {
+            if (maxVal < nums[i]) {
+                index = i;
+                maxVal = nums[i];
+            }
+        }
+
+        TreeNode root = new TreeNode(maxVal);
+        // 递归调用构造左右子树
+        root.left = build(nums, lo, index - 1);
+        root.right = build(nums, index + 1, hi);
+
+        return root;
+    }
+}
+```
+
+</div></div>
+
+<div data-tab-item="go" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```go
+// 注意：go 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+// 主函数
+func constructMaximumBinaryTree(nums []int) *TreeNode {
+    return build(nums, 0, len(nums)-1)
+}
+
+// 定义：将 nums[lo..hi] 构造成符合条件的树，返回根节点
+func build(nums []int, lo, hi int) *TreeNode {
+    // base case
+    if lo > hi {
+        return nil
+    }
+
+    // 找到数组中的最大值和对应的索引
+    index, maxVal := -1, int(^uint(0)>>1) * -1
+    for i := lo; i <= hi; i++ {
+        if maxVal < nums[i] {
+            index = i
+            maxVal = nums[i]
+        }
+    }
+
+    root := &TreeNode{Val: maxVal}
+    // 递归调用构造左右子树
+    root.Left = build(nums, lo, index-1)
+    root.Right = build(nums, index+1, hi)
+
+    return root
+}
+```
+
+</div></div>
+
+<div data-tab-item="javascript" class="tab-item " data-tab-group="default"><div class="highlight">
+
+```javascript
+// 注意：javascript 代码由 chatGPT🤖 根据我的 java 代码翻译。
+// 本代码的正确性已通过力扣验证，如有疑问，可以对照 java 代码查看。
+
+// 主函数
+var constructMaximumBinaryTree = function(nums) {
+    return build(nums, 0, nums.length - 1);
+};
+
+// 定义：将 nums[lo..hi] 构造成符合条件的树，返回根节点
+var build = function(nums, lo, hi) {
+    // base case
+    if (lo > hi) {
+        return null;
+    }
+
+    // 找到数组中的最大值和对应的索引
+    let index = -1, maxVal = -Infinity;
+    for (let i = lo; i <= hi; i++) {
+        if (maxVal < nums[i]) {
+            index = i;
+            maxVal = nums[i];
+        }
+    }
+
+    let root = new TreeNode(maxVal);
+    // 递归调用构造左右子树
+    root.left = build(nums, lo, index - 1);
+    root.right = build(nums, index + 1, hi);
+
+    return root;
+};
+```
+
+</div></div>
+</div></div>
+
+<hr /><details open hint-container details><summary style="font-size: medium"><strong>🎃🎃 算法可视化 🎃🎃</strong></summary><div id="data_maximum-binary-tree"  category="leetcode" ></div><div class="resizable aspect-ratio-container" style="height: 100%;">
+<div id="iframe_maximum-binary-tree"></div></div>
+</details><hr /><br />
+
+</div>
+</details>
+</div>
+
+
 
